# 2022-server

./: .gitignore  README.md  pyproject.toml
server/: db.sqlite3
server/posts/: models.py
server/posts/migrations/: 0001_initial.py
server/server/: settings.py  urls.py
server/stocks/: models.py  serializers.py  views.py
server/stocks/management/commands/: update_list_is_good_character.py  update_list_stock.py
server/stocks/migrations/: 0001_initial.py  0002_auto_20210414_0155.py  0003_stock_is_blacklist.py  0004_remove_stock_is_good_character.py
